[sapl-demo-benchmark] fix sonar issues